<resources>
    <string name="app_name">Trivia</string>
    <string name="title">Trivia Quiz</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="previous_button">previous button</string>
    <string name="next_button">next button</string>
    <string name="counter_questions">0 out of 100</string>
    <string name="correct_answer">Correct!</string>
    <string name="wrong_answer">Wrong!</string>
    <string name="question_goes_here">Question goes here</string>
</resources>